Book: better explanation of pre-convolved stars in first tutorial
In the first tutorial, we build four stars (as a point source) in the model
image. But hadn't really explained the fact that they only cover a single
pixel and this caused confusion for new readers: when you open the image in
DS9 and look at the full image at once, you don't see the four stars.

With this commit, this important issue is clarified a little more to
hopefully avoid this confusion for future readers.

This issue was mentioned by Samane Raji.

--- a/THANKS
+++ b/THANKS
@@ -69,6 +69,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Marcel Popescu                       mpopescu@iac.es
     Bob Proulx                           bob@proulx.com
     Joseph Putko                         josephputko@gmail.com
+    Samane Raji                          samaneraji@gmail.com
     Teymoor Saifollahi                   teymur.saif@gmail.com
     Joanna Sakowska                      js01093@surrey.ac.uk
     Elham Saremi                         saremi@ipm.ir
